; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_cls_api.c_tcf_tunnel_encap_get_tunnel.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_cls_api.c_tcf_tunnel_encap_get_tunnel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flow_action_entry = type { i64, i64, i32 }
%struct.tc_action = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@tcf_tunnel_encap_put_tunnel = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.flow_action_entry*, %struct.tc_action*)* @tcf_tunnel_encap_get_tunnel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tcf_tunnel_encap_get_tunnel(%struct.flow_action_entry* %0, %struct.tc_action* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.flow_action_entry*, align 8
  %5 = alloca %struct.tc_action*, align 8
  store %struct.flow_action_entry* %0, %struct.flow_action_entry** %4, align 8
  store %struct.tc_action* %1, %struct.tc_action** %5, align 8
  %6 = load %struct.tc_action*, %struct.tc_action** %5, align 8
  %7 = call i64 @tcf_tunnel_info_copy(%struct.tc_action* %6)
  %8 = load %struct.flow_action_entry*, %struct.flow_action_entry** %4, align 8
  %9 = getelementptr inbounds %struct.flow_action_entry, %struct.flow_action_entry* %8, i32 0, i32 0
  store i64 %7, i64* %9, align 8
  %10 = load %struct.flow_action_entry*, %struct.flow_action_entry** %4, align 8
  %11 = getelementptr inbounds %struct.flow_action_entry, %struct.flow_action_entry* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %26

17:                                               ; preds = %2
  %18 = load i32, i32* @tcf_tunnel_encap_put_tunnel, align 4
  %19 = load %struct.flow_action_entry*, %struct.flow_action_entry** %4, align 8
  %20 = getelementptr inbounds %struct.flow_action_entry, %struct.flow_action_entry* %19, i32 0, i32 2
  store i32 %18, i32* %20, align 8
  %21 = load %struct.flow_action_entry*, %struct.flow_action_entry** %4, align 8
  %22 = getelementptr inbounds %struct.flow_action_entry, %struct.flow_action_entry* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.flow_action_entry*, %struct.flow_action_entry** %4, align 8
  %25 = getelementptr inbounds %struct.flow_action_entry, %struct.flow_action_entry* %24, i32 0, i32 1
  store i64 %23, i64* %25, align 8
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %17, %14
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @tcf_tunnel_info_copy(%struct.tc_action*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
